objects/ssot__WorkResourceAbsence__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AbsenceIdentifier__c</fullName>
        <label>Absence Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AbsenceType__c</fullName>
        <label>Absence Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AddressText__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DistanceUnitOfMeasureId__c</fullName>
        <label>Distance Unit Of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationMinutes__c</fullName>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedTravelDistanceFromNumber__c</fullName>
        <label>Estimated Travel Distance From</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedTravelDistanceToNumber__c</fullName>
        <label>Estimated Travel Distance To</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedTravelTimeFromMinutes__c</fullName>
        <label>Estimated Travel Time From Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedTravelTimeToMinutes__c</fullName>
        <label>Estimated Travel Time To Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Work Resource Absence Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsApproved__c</fullName>
        <label>Is Approved</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TravelTimeFromCalculationBasis__c</fullName>
        <label>Travel Time From Calculation Basis</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TravelTimeToCalculationBasis__c</fullName>
        <label>Travel Time To Calculation Basis</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkResourceId__c</fullName>
        <label>Work Resource</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1709922308134_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkResourceAbsence_DistanceUnitOfMe_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>WorkResourceAbsence_DistanceUnitOfMe_rel</relationshipLabel>
        <relationshipName>rel_1709922308134_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1709922311902_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkResourceAbsence_CreatedById_map__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>WorkResourceAbsence_CreatedById_map__rel</relationshipLabel>
        <relationshipName>rel_1709922311902_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1709922314160_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkResourceAbsence_LastModifiedById_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>WorkResourceAbsence_LastModifiedById_rel</relationshipLabel>
        <relationshipName>rel_1709922314160_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>